--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activities.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -28,7 +28,7 @@
 
         </activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activities.MainActivity">
 
         </activity>
 
