--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,12 @@
 
         </activity>
 
+        <activity android:name=".Activities.UserAccount">
+
+        </activity>
+
         <activity android:name=".Activities.MainActivity" />
+
 
         <activity android:name=".Activities.ResetPasswordActivity">
 
